argocd/killedby-app/00-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: killedby
  namespace: killedby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: killedby
  template:
    metadata:
      labels:
        app: killedby
    spec:
      containers:
      - name: killedby
        image: bacherik/killedby:latest
        ports:
        - containerPort: 8080
