argocd/killedby-app/01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: killedby-service
  namespace: killedby
spec:
  selector:
    app: killedby
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
