argocd/killedby-app/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: killedby
  namespace: killedby
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16"
    gethomepage.dev/description: List of killed tech-products
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: SelfHosted
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: KilledBy-(BachErik)
spec:
  tls:
  - hosts:
    - killedby.bacherik.de
    secretName: killedby-tls
  rules:
  - host: "killedby.bacherik.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: killedby
            port:
              number: 80
